updated HTML and cs js files

--- a/practice.html
+++ b/practice.html
@@ -1,9 +1,12 @@
-<!Doctype html>
-<html>
+<html lang="en">
 <head>
-<title>practice</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Home</title>
 </head>
 <body bgcolor="green" text="orange" vlink="red" alink="orange" bgsound src="C:\Users\shivakumar\Downloads\Adhipurush album\[iSongs.info] 02 - Ram Sita Ram.mp3">
+<p>GIT</p>
+<p>GITHUB</p>
 <h1>WELCOME TO PRIME INTUIT</h1><br>
 <h2>TODAY WE ARE GOING TO DO HTML</h2>
 <pre>
