--- a/practice.html
+++ b/practice.html
@@ -7,6 +7,13 @@
 <body bgcolor="green" text="orange" vlink="red" alink="orange" bgsound src="C:\Users\shivakumar\Downloads\Adhipurush album\[iSongs.info] 02 - Ram Sita Ram.mp3">
 <p>GIT</p>
 <p>GITHUB</p>
+<ul>
+   <li>Day 1 : Orange</li>
+   <li>Day 2 : white </li>
+   <li>Day 3 : Red</li>
+   <li>Day 4 : Royal Blue</li>
+   <li>Day 5 : Yellow</li>
+</ul>
 <h1>WELCOME TO PRIME INTUIT</h1><br>
 <h2>TODAY WE ARE GOING TO DO HTML</h2>
 <pre>
