--- a/practice.html
+++ b/practice.html
@@ -13,6 +13,10 @@
    <li>Day 3 : Red</li>
    <li>Day 4 : Royal Blue</li>
    <li>Day 5 : Yellow</li>
+   <li>Day 6 : Green</li>
+   <li>Day 7 : Grey</li>
+   <li>Day 8 : Purple</li>
+   <li>Day 9 : Peacock Green</li>
 </ul>
 <h1>WELCOME TO PRIME INTUIT</h1><br>
 <h2>TODAY WE ARE GOING TO DO HTML</h2>
